refactor(memory): read recall from unified records